--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tagsaver": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"node ./index.js filto --proxy=http://127.0.0.1:1080"
   },
   "repository": {
     "type": "git",
