--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node ./index.js filto --proxy=http://127.0.0.1:1080"
+    "dev":"node ./index.js insanalysis --proxy=http://127.0.0.1:1080"
   },
   "repository": {
     "type": "git",
